# rag-learning-platform

./: .gitignore  DEPLOYMENT.md  README.md  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: agent.py  chunk.py  documents.py  embedding.py  news.py  optimize.py  pipelines.py  run_python.py
backend/app/core/: codegen.py  executor.py  spec.py  stream.py  tracer.py
backend/app/data/demo_docs/: ai_intro.md  news_ai_ethics_kr.md  news_climate_kr.md  news_economy_kr.md  news_kpop_kr.md  news_space_kr.md  rag_explained.md
backend/app/nodes/: __init__.py  base.py  chunker.py  embedder.py  generator.py  loader.py  retriever.py
backend/app/templates/: pipeline.py.j2
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/editor/: page.tsx
frontend/src/app/editor/flow/: page.tsx
frontend/src/app/lab/: page.tsx
frontend/src/app/lab/chunking/: page.tsx
frontend/src/app/lab/embedding/: page.tsx
frontend/src/app/lab/langgraph/: page.tsx
frontend/src/app/lab/preprocessing/: page.tsx
frontend/src/app/lessons/: page.tsx
frontend/src/app/lessons/[id]/: page.tsx
frontend/src/components/: ApiKeyInput.tsx  CodeEditorAndRun.tsx  LoadingOverlay.tsx  OptimizeModal.tsx  ParamHelp.tsx  PipelineNode.tsx  TourGuide.tsx  TracePanel.tsx
frontend/src/components/tutorial/: CodingExercise.tsx  Renderer.tsx
frontend/src/lib/: api.ts  lessons.tsx  stream.ts  useApiKey.ts
